syntax = "proto2";

package pfyl;

message TraceEntity {
  required uint32 type = 1;
  required uint64 tick = 2;
  optional uint64 data = 3;
  optional uint64 data2 = 4;
  optional uint64 data3 = 5;
}